# parimitham

./: .gitignore  Dockerfile  README.md  django_app_asgi.py  django_app_wsgi.py  docker-compose.yaml  docker-compose.yml  fly.toml  locustfile.py  manage.py  pyproject.toml  queue_bridge.py  run_dj.py  task_worker.py  up.py  web_worker.py  worker_task.py
locust_files/: delayed.py  sync.py
locust_test/: locustfile.py
parimitham/: settings.py  urls.py  worker.py  wsgi.py
parimitham/core/: admin.py  apps.py  interpreter_queue_backend.py  models.py  tasks.py  urls.py  views.py
parimitham/core/management/commands/: execute_task_from_interpreter_queue.py
parimitham/core/migrations/: 0001_initial.py
slides/: links.md
